Some functionality added

--- a/src/TheWorld/Views/Shared/_Layout.cshtml
+++ b/src/TheWorld/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 <body>
     <div id="sidebar">
         <img src="img/IMG_2168.jpg" alt="Pappi Muchachos Lucha Libre 7th" class="pappi" />
-        <span id="username">Pappi Muchachos</span>
+        <span id="username">Pappi Muchachos & Tema</span>
         <ul class="menu">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
