--- a/src/TheWorld/Views/Shared/_Layout.cshtml
+++ b/src/TheWorld/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
         <img src="img/IMG_2168.jpg" alt="Pappi Muchachos Lucha Libre 7th" class="pappi" />
         <span id="username">Pappi Muchachos & Tema</span>
         <ul class="menu">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="active"><a asp-controller="App" asp-action="Index">Home</a></li>
+            <li><a asp-controller="App" asp-action="About">About</a></li>
+            <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
         </ul>
     </div>
 
@@ -43,6 +43,8 @@
 
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="~/js/site.js"></script>
+
+    @RenderSection("Scripts", false)
 
 </body>
 
