--- a/src/TheWorld/Views/App/Contact.cshtml
+++ b/src/TheWorld/Views/App/Contact.cshtml
@@ -1,19 +1,39 @@
-﻿@model TheWorld.ViewModels.ContactViewModel
-@{ 
+﻿@model TheWorld.ViewModels.ContaсtViewModel
+@{
     ViewBag.Title = "Contact Page";
 }
 @section Scripts {
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 }
-<h2>Contact</h2>
-
-<form>
-    <label asp-for="Name">Name</label>
-    <input asp-for="Name" />
-    <label asp-for="Email">Email</label>
-    <input type="email" asp-for="Email" />
-    <label asp-for="Message">Message</label>
-    <textarea cols="40" rows="4" asp-for="Message"></textarea>
-    <div><input type="submit" value="Send Message!" asp-for="" /></div>
-</form>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <h2>Contact</h2>
+        <form method="post">
+            <div asp-validation-summary="ValidationSummary.ModelOnly"></div>
+            @if (ViewBag.Message != null)
+            {
+                <div>@ViewBag.Message</div>
+            }
+            <div class="form-group">
+                <label asp-for="Name">Name</label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-muted"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email">Email</label>
+                <input type="email" asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-muted"></span>               
+            </div>
+            <div class="form-group">                
+                <label asp-for="Message">Message</label>
+                <textarea cols="40" rows="4" asp-for="Message" class="form-control"></textarea>               
+                <span asp-validation-for="Message" class="text-muted"></span>
+            </div>
+            <div class="form-group">
+                <a asp-controller="App" asp-action="Index" class="btn btn-default">Cancel</a>
+                <input type="submit" value="Send Message!" class="btn btn-success" />
+            </div>
+        </form>
+    </div>
+</div>
