--- a/src/TheWorld/Views/App/Index.cshtml
+++ b/src/TheWorld/Views/App/Index.cshtml
@@ -1,19 +1,30 @@
 @{
     ViewBag.Title = "Home Page";
 }
-<h1>The World</h1>
-<p>This Will Be A Fine WebSite Soon!</p>
 
-<form>
-    <div>
-        <label>Date</label>
-        <input />
+<div class="row">
+
+    <div class="col-md-6">
+        <h1>The World</h1>
+        <p>This Will Be A Fine WebSite Soon!</p>
+
+        <form>
+            <div class="form-group">
+                <label>Date</label>
+                <input class="form-control" />
+            </div>
+            <div class="form-group">
+                <label>Location</label>
+                <input class="form-control" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="add" class="btn btn-success btn-lg" />
+            </div>
+        </form>
     </div>
-    <div>
-        <label>Location</label>
-        <input />
+
+    <div class="col-md-6">
+       <h2>The Map</h2>
     </div>
-    <div>
-        <input type="submit" value="add" />
-    </div>
-</form>
+
+</div>
